--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,18 +1,22 @@
 [toolchain]
+anchor_version = "0.31.1"
 
 [features]
 seeds = false
 skip-lint = false
 
 [programs.localnet]
-interact_dapp = "3XVtwgUZ7P1xhMJ96yHzKaoSMGF7f1DbY4RLP7AyLLMn"
+interact_dapp = "6Ptvb7LDyA61Yz6E7b5P7bQpvfhPE4bDkaT757sGU6xH"
+[programs.devnet]
+interact_dapp = "6Ptvb7LDyA61Yz6E7b5P7bQpvfhPE4bDkaT757sGU6xH"
+liquidity = "5uDkCoM96pwGYhAUucvCzLfm5UcjVRuxz6gH81RnRBmL"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "Devnet"
 wallet = "/Users/hoangthuylinh/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/main.ts"
