--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
-        "@coral-xyz/anchor": "^0.29.0"
+        "@coral-xyz/anchor": "0.31.1",
+        "@jup-ag/lend": "^0.0.101",
+        "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
+        "@raydium-io/raydium-sdk-v2": "^0.2.30-alpha",
+        "@solana/spl-memo": "^0.2.5",
+        "@solana/spl-token": "^0.4.14",
+        "@solana/web3.js": "^1.98.4",
+        "bn.js": "^5.2.2"
     },
     "devDependencies": {
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3",
-        "ts-mocha": "^10.0.0",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
-        "typescript": "^4.3.5",
-        "prettier": "^2.6.2"
+        "chai": "^4.3.4",
+        "mocha": "^11.7.4",
+        "prettier": "^2.6.2",
+        "ts-mocha": "^10.0.0",
+        "typescript": "^4.3.5"
     }
 }
