--- a/programs/interact-dapp/Cargo.toml
+++ b/programs/interact-dapp/Cargo.toml
@@ -14,6 +14,14 @@ no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+devnet = ["raydium-amm-v3/devnet"]
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
+anchor-lang = "0.31.1"
+anchor-spl = "0.31.1"
+raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
+    "no-entrypoint",
+    "cpi",
+    "devnet"
+]}
