--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,14 @@
               "types": ["mocha", "chai"],
               "typeRoots": ["./node_modules/@types"],
               "lib": ["es2015"],
-              "module": "commonjs",
-              "target": "es6",
-              "esModuleInterop": true
+              "module": "nodenext",
+              "moduleResolution": "nodenext",
+              "allowSyntheticDefaultImports": true,
+              "target": "es2020",
+              "esModuleInterop": true,
+              "skipLibCheck": true,
+              "strict": false,
+              "resolveJsonModule": true
             }
           }
           
